--- a/11-09-2024/code/package.json
+++ b/11-09-2024/code/package.json
@@ -6,6 +6,7 @@
   "main": "app.js",
   "scripts": {
     "dev": "node --watch src/app.js",
+    "rndPar": "node --watch src/rndPar.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "italijancic@comunidad.frrq.utn.edu.ar",
